--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,8 +27,8 @@ steps:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
 
-- task: AzureWebApp@1
-  inputs:
-    azureSubscription: 'Your-Service-Connection'
-    appName: 'Your-WebApp-Name'
-    package: $(Build.ArtifactStagingDirectory)
+# - task: AzureWebApp@1
+#   inputs:
+#     azureSubscription: 'Your-Service-Connection'
+#     appName: 'Your-WebApp-Name'
+#     package: $(Build.ArtifactStagingDirectory)
